--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-site",
+  "name": "solara-meridian-studio-redbubble",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
